--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,12 +1,13 @@
 .App-body {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  padding-left: 50px;
-  flex-direction: column;
-  align-items: left;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    padding-left: 50px;
+    padding-top: 50px;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+    overflow: hidden;
 }
-
