--- a/src/style/Section.css
+++ b/src/style/Section.css
@@ -1,6 +1,11 @@
+.section-container {
+    padding-left: 20px;
+}
+
 .section-header {
     font-size: 30px;
     margin: 10px;
+    margin-left: 0px;
 }
 
 .line {
@@ -11,12 +16,27 @@
     margin: 5px;
     margin-right: 10px;
 }
+
 .section-description {
     color: #6c6f78;
     font-size: 20px;
     margin: 10px;
+    margin-left: 0px;
+}
+
+.tasks-block {
+    display: flex;
+    align-items: stretch;
+    padding: 30px 0 30px;
+}
+
+.vertical-line {
+    width: 1px;
+    background-color: #6c6f78;
+    margin-left: 0;
+    margin-right: 30px;
 }
 
 .tasks-container {
-    padding: 30px;
+    margin: 0;
 }
