--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -1,13 +1,13 @@
 .header-container {
-    margin-bottom: 50px;
+    margin-bottom: 4em;
 }
 
 .header-label {
-    font-size: 40px;
-
+    font-size: 2.5rem;
+    margin-bottom: 0.5em;
 }
 
 .header-description {
-    font-size: 20px;
+    font-size: 1.5rem;
     color: #8e919a;
 }
