--- a/src/style/Section.css
+++ b/src/style/Section.css
@@ -1,42 +1,56 @@
 .section-container {
-    padding-left: 20px;
+    padding-left: 1.25em;
 }
 
 .section-header {
-    font-size: 30px;
-    margin: 10px;
-    margin-left: 0px;
-}
-
-.line {
-    background-color: #6c6f78;
-    width: 60px;
-    height: 1px;
-    display: inline-block;
-    margin: 5px;
-    margin-right: 10px;
+    font-size: 2rem;
+    margin: 0.5em;
+    margin-left: 0;
 }
 
 .section-description {
     color: #6c6f78;
-    font-size: 20px;
-    margin: 10px;
+    font-size: 1.5rem;
+    margin: 0.5em;
     margin-left: 0px;
+    max-width: 50em;
 }
 
 .tasks-block {
     display: flex;
     align-items: stretch;
-    padding: 30px 0 30px;
+    padding: 2em 0 2em;
 }
 
 .vertical-line {
     width: 1px;
     background-color: #6c6f78;
     margin-left: 0;
-    margin-right: 30px;
+    margin-right: 2em;
 }
 
 .tasks-container {
     margin: 0;
+}
+
+@media (max-width: 810px) {
+    .section-container {
+        padding-left: calc(1.25em - 32px + 4vw);
+    }
+    .vertical-line {
+        margin-right: calc(2em - 32px + 4vw);
+    }
+}
+
+@media (max-width: 550px) {
+    .section-container {
+        padding-left: 0
+    }
+    .vertical-line {
+        display: none;
+        margin: 0;
+    }   
+    .tasks-container {
+        width: 100%;
+    }
 }
