--- a/src/style/App.css
+++ b/src/style/App.css
@@ -7,8 +7,9 @@
     padding-top: 5em;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     color: white;
+    user-select: none;
 }
 
 .content {
